--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pitchy": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "vexflow": "^5.0.0"
